still trying to make JavaFX work